Removed .gradle and .gitignore updated

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
 # All files in tmp or build directory
-./build
-./build/*
-./build/tmp
-./tmp/*
-./.gradle
-./gradle/*
+build
+build/*
+build/tmp
+tmp/*
+.gradle
+.gradle/*
 
 # Compiled class file
 *.class
